--- a/package.json
+++ b/package.json
@@ -4,6 +4,39 @@
   "description": "Место - это интерактивная страница, на которой пользователи могут делиться фотографиями, удалять их и ставить лайки.",
   "main": "index.js",
   "dependencies": {
+    "core-js": "^3.32.1",
+    "core-js-compat": "^3.32.0",
+    "core-util-is": "^1.0.3"
+  },
+  "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+    "dev": "webpack serve"
+  },
+  "author": "Timur Belov",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@babel/preset-env": "^7.22.14",
+    "autoprefixer": "^10.4.15",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
+    "cssnano": "^6.0.1",
+    "gh-pages": "^6.1.0",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "5.1.4",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
     "accepts": "^1.3.8",
     "acorn": "^8.10.0",
     "acorn-import-assertions": "^1.9.0",
@@ -57,10 +90,7 @@
     "convert-source-map": "^1.9.0",
     "cookie": "^0.5.0",
     "cookie-signature": "^1.0.6",
-    "core-js": "^3.32.1",
-    "core-js-compat": "^3.32.0",
-    "core-util-is": "^1.0.3",
-    "cosmiconfig": "^8.2.0",
+     "cosmiconfig": "^8.2.0",
     "cross-spawn": "^7.0.3",
     "css-declaration-sorter": "^6.4.1",
     "css-select": "^4.3.0",
@@ -372,41 +402,5 @@
     "ws": "^8.13.0",
     "yallist": "^3.1.1",
     "yocto-queue": "^1.0.0"
-  },
-  "scripts": {
-    "build": "webpack --mode production",
-<<<<<<< HEAD
-    "dev": "webpack serve",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-=======
-    "dev": "webpack serve"
->>>>>>> fc547fb77c5b120641b73da97bf9e27b1484a261
-  },
-  "author": "Timur Belov",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.22.11",
-    "@babel/preset-env": "^7.22.14",
-    "autoprefixer": "^10.4.15",
-    "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.8.1",
-    "cssnano": "^6.0.1",
-<<<<<<< HEAD
-    "gh-pages": "^6.1.0",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss-loader": "^7.3.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "5.1.4",
-=======
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss-loader": "^7.3.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
->>>>>>> fc547fb77c5b120641b73da97bf9e27b1484a261
-    "webpack-dev-server": "^4.15.1"
   }
 }
